[package]
name = "nusfreeaudio"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
nus3audio = "1.1.0"
lazy_static = "1.4.0"
libc = "0.2.90"
walkdir = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
